--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,8 @@
 name = Math-Counting
+author  = Gene Boggs <gene@cpan.org>
+license = Perl_5
+copyright_holder = Gene Boggs
+copyright_year   = 2015
 
 [@Basic]
 [VersionFromModule]
@@ -6,8 +10,22 @@ name = Math-Counting
 format = %v %{yyyy-MM-dd HH:mm:ss}d
 [MinimumPerl]
 [AutoPrereqs]
+
+[CheckChangesHasContent]
+[Authority]
+[PkgVersion]
 [PodWeaver]
 [PodCoverageTests]
+[PodSyntaxTests]
+[Test::NoTabs]
+[Test::Compile]
+[TestRelease]
+
+[MetaConfig]
+[MetaJSON]
+[AutoMetaResources]
+bugtracker.rt = 1
+repository.github = user:ology
 
 [Prereqs]
 Math::BigInt = 1.78
