--- a/dist.ini
+++ b/dist.ini
@@ -1,31 +1,33 @@
-name = Math-Counting
-author  = Gene Boggs <gene@cpan.org>
-license = Perl_5
+name             = Math-Counting
+author           = Gene Boggs <gene@cpan.org>
+license          = Perl_5
 copyright_holder = Gene Boggs
 copyright_year   = 2015
 
-[@Basic]
 [VersionFromModule]
-[NextRelease]
-format = %v %{yyyy-MM-dd HH:mm:ss}d
 [MinimumPerl]
 [AutoPrereqs]
 
 [CheckChangesHasContent]
+[NextRelease]
+format = %v %{yyyy-MM-dd HH:mm:ss}d
+
 [Authority]
 [PkgVersion]
 [PodWeaver]
 [PodCoverageTests]
 [PodSyntaxTests]
 [Test::NoTabs]
+[Test::EOL]
 [Test::Compile]
-[TestRelease]
 
 [MetaConfig]
 [MetaJSON]
-[AutoMetaResources]
-bugtracker.rt = 1
-repository.github = user:ology
+[MetaResources]
+repository.web    = https://github.com/ology/Math-Counting
+repository.type   = git
+bugtracker.mailto = bug-Math-Counting@rt.cpan.org
+bugtracker.web    = https://rt.cpan.org/Public/Dist/Display.html?Name=Math-Counting
 
 [Prereqs]
 Math::BigInt = 1.78
@@ -46,3 +48,21 @@ stopwords = Petar
 stopwords = Kaleychev
 stopwords = Jacobsen
 stopwords = derangements
+
+[GatherDir]
+exclude_filename = LICENSE
+[PruneCruft]
+[ManifestSkip]
+[MetaYAML]
+[License]
+[Readme]
+[ExtraTests]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[Manifest]
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
+[CopyFilesFromBuild]
+copy = LICENSE
