--- a/dist.ini
+++ b/dist.ini
@@ -23,11 +23,7 @@ format = %v %{yyyy-MM-dd HH:mm:ss}d
 
 [MetaConfig]
 [MetaJSON]
-[MetaResources]
-repository.web    = https://github.com/ology/Math-Counting
-repository.type   = git
-bugtracker.mailto = bug-Math-Counting@rt.cpan.org
-bugtracker.web    = https://rt.cpan.org/Public/Dist/Display.html?Name=Math-Counting
+[GithubMeta]
 
 [Prereqs]
 Math::BigInt = 1.78
